test(global): 테스트 코드 스타일 및 명칭 표준화