@@ -1,8 +1,8 @@
 package team.themoment.hellogsmv3.domain.oneseo.service;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.BDDMockito.given;
+import static org.mockito.BDDMockito.willThrow;
 import static org.mockito.Mockito.*;
 import static team.themoment.hellogsmv3.domain.oneseo.entity.type.GraduationType.*;
 import static team.themoment.hellogsmv3.domain.oneseo.entity.type.Major.*;
@@ -78,7 +78,7 @@ class CreateOneseoServiceTest {
 
         List<Integer> achievement = Arrays.asList(5, 5, 5, 5, 5, 5, 5, 5, 5);
         List<String> generalSubjects = Arrays.asList("국어", "도덕", "사회", "역사", "수학", "과학", "기술가정", "영어");
-        List<String> newSubjects = Arrays.asList("프로그래밍");
+        List<String> newSubjects = List.of("프로그래밍");
         List<Integer> artsPhysicalAchievement = Arrays.asList(5, 5, 5, 5, 5, 5, 5, 5, 5);
         List<String> artsPhysicalSubjects = Arrays.asList("체육", "미술", "음악");
         List<Integer> absentDays = Arrays.asList(0, 0, 0);
@@ -198,7 +198,7 @@ class CreateOneseoServiceTest {
                 assertEquals(volunteerTime, capturedAchievement.getVolunteerTime());
                 assertEquals(liberalSystem, capturedAchievement.getLiberalSystem());
                 assertEquals(freeSemester, capturedAchievement.getFreeSemester());
-                assertEquals(null, capturedAchievement.getGedAvgScore());
+                assertNull(capturedAchievement.getGedAvgScore());
             }
         }
 
@@ -210,8 +210,8 @@ class CreateOneseoServiceTest {
             void setUp() {
                 given(reqDto.graduationType()).willReturn(GRADUATE);
 
-                doThrow(new ExpectedException("존재하지 않는 지원자입니다. member ID: " + memberId, HttpStatus.NOT_FOUND))
-                        .when(memberService).findByIdForUpdateOrThrow(memberId);
+                willThrow(new ExpectedException("존재하지 않는 지원자입니다. member ID: " + memberId, HttpStatus.NOT_FOUND))
+                        .given(memberService).findByIdForUpdateOrThrow(memberId);
             }
 
             @Test
