@@ -5,6 +5,7 @@ import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.*;
 
 import java.io.InputStream;
+import java.net.URI;
 import java.net.URL;
 
 import org.junit.jupiter.api.AfterEach;
@@ -28,7 +29,7 @@ import team.themoment.hellogsmv3.global.thirdParty.aws.s3.service.UploadImageSer
 import team.themoment.sdk.exception.ExpectedException;
 
 @DisplayName("UploadImageService 클래스의")
-public class UploadImageServiceTest {
+class UploadImageServiceTest {
 
     @Mock
     private S3Template s3Template;
@@ -49,7 +50,7 @@ public class UploadImageServiceTest {
         s3Environment = mock(S3Environment.class);
         uploadImageService = new UploadImageService(s3Template, s3Environment);
 
-        when(s3Environment.bucketName()).thenReturn("bucket-name");
+        given(s3Environment.bucketName()).willReturn("bucket-name");
     }
 
     @AfterEach
@@ -60,7 +61,7 @@ public class UploadImageServiceTest {
     }
 
     @Nested
-    @DisplayName("execute 메소드는")
+    @DisplayName("execute 메서드는")
     class Describe_execute {
         String s3Key = "some-key";
 
@@ -70,7 +71,7 @@ public class UploadImageServiceTest {
             MultipartFile emptyFile = new MockMultipartFile("file", "", "text/plain", new byte[0]);
 
             @Test
-            @DisplayName("ExpectedException을 던진다.")
+            @DisplayName("ExpectedException을 던진다")
             void it_throws_expected_exception() {
                 ExpectedException exception = assertThrows(ExpectedException.class,
                         () -> uploadImageService.execute(emptyFile));
@@ -86,7 +87,7 @@ public class UploadImageServiceTest {
             MultipartFile file = new MockMultipartFile("file", "test.txt", "text/plain", "data".getBytes());
 
             @Test
-            @DisplayName("ExpectedException을 던진다.")
+            @DisplayName("ExpectedException을 던진다")
             void it_throws_expected_exception() {
                 ExpectedException exception = assertThrows(ExpectedException.class,
                         () -> uploadImageService.execute(file));
@@ -104,15 +105,15 @@ public class UploadImageServiceTest {
 
             @BeforeEach
             void setUp() throws Exception {
-                URL mockUrl = new URL("https://bucket-name.s3.amazonaws.com/" + s3Key);
-                when(mockS3Resource.getURL()).thenReturn(mockUrl);
+                URL mockUrl = URI.create("https://bucket-name.s3.amazonaws.com/" + s3Key).toURL();
+                given(mockS3Resource.getURL()).willReturn(mockUrl);
 
                 given(s3Template.upload(anyString(), anyString(), any(InputStream.class), any(ObjectMetadata.class)))
                         .willReturn(mockS3Resource);
             }
 
             @Test
-            @DisplayName("S3에 업로드된 파일의 URL을 반환한다.")
+            @DisplayName("S3에 업로드된 파일의 URL을 반환한다")
             void it_returns_uploaded_file_url() {
                 UploadImageResDto result = uploadImageService.execute(file);
 
@@ -133,7 +134,7 @@ public class UploadImageServiceTest {
             }
 
             @Test
-            @DisplayName("RuntimeException을 던진다.")
+            @DisplayName("RuntimeException을 던진다")
             void it_throws_runtime_exception() {
                 assertThrows(RuntimeException.class, () -> uploadImageService.execute(file));
             }
